# earthstream_sensor_presale

./: Cargo.toml  README.md  canister_ids.json  dfx.json
src/earthstream_sensor_presale_backend/: Cargo.toml  earthstream_sensor_presale_backend.did  spec
src/earthstream_sensor_presale_backend/src/: evm_rpc.rs  lib.rs
