[package]
name = "earthstream_sensor_presale_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"              # For Candid types and serialization/deserialization
serde = { version = "1.0", features = ["derive"] }  # For (de)serialization
serde_json = "1.0"          # For handling JSON in Rust
ic-cdk = "0.17.0"              # For Internet Computer canister development
ic-cdk-macros = "0.17.0"
serde_bytes = "0.11.12"
sha2 = "0.10" 
hex = "0.4"
